structures: fix null pointer dereference

BUG: 314671

svn path=/branches/KDE/4.10/kdesdk/okteta/; revision=1338865